ovf/fixtures/external/OVFToolTemplates/OVF/xmltestfiles/Envelope/Pos/valid_bare_minimal2.ovf
<?xml version="1.0" encoding="utf-8"?>
<ovf:Envelope xmlns:xsi-namespace="http://www.w3.org/2001/XMLSchema-instance" xmlns:ovf="http://www.vmware.com/schema/ovf/1/envelope" xmlns:vssd-namespace="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_VirtualSystemSettingData" xmlns:rasd-namespace="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_ResourceAllocationSettingData" ovf:version="0.9">
    <References>
        <File ovf:id="vmdisk1" ovf:href="../../../vmdk/valid_disk.vmdk" ovf:size="329197568"/>
    </References>
     <Content xsi-namespace:type="ovf:VirtualSystem_Type" ovf:id="PTC01_VM">
        <Info>The virtual machince "ArchLinux"</Info>
        <Section xsi-namespace:type="ovf:VirtualHardwareSection_Type" ovf:required="true">
            <Info>512 MB , 1 CPU, 1 disk, 1 nic</Info>
            <System>
                <vssd-namespace:InstanceId>0</vssd-namespace:InstanceId>
                <vssd-namespace:VirtualSystemIdentifier>system id</vssd-namespace:VirtualSystemIdentifier>
                <vssd-namespace:VirtualSystemType>vmx-04</vssd-namespace:VirtualSystemType>
            </System>
        </Section>
     </Content>
</ovf:Envelope>
